deploy/overlays/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lcp-server
spec:
  tls:
    - hosts:
        - dev.testmedical.ir
      secretName: lcp-dev-server-tls
  rules:
    - host: dev.testmedical.ir
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: lcp-server
                port:
                  number: 80
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: lcp-server
                port:
                  number: 80
          - path: /publications
            pathType: Prefix
            backend:
              service:
                name: lcp-server
                port:
                  number: 80
          - path: /licenses
            pathType: Prefix
            backend:
              service:
                name: lcp-server
                port:
                  number: 80
          - path: /swagger.yaml
            pathType: Prefix
            backend:
              service:
                name: lcp-server
                port:
                  number: 80
          - path: /swagger.json
            pathType: Prefix
            backend:
              service:
                name: lcp-server
                port:
                  number: 80
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: lcp-server
                port:
                  number: 80
          - path: /healthz
            pathType: Prefix
            backend:
              service:
                name: lcp-server
                port:
                  number: 80
          - path: /readyz
            pathType: Prefix
            backend:
              service:
                name: lcp-server
                port:
                  number: 80
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: lcp-server
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lcp-admin-ui
                port:
                  number: 80
